# sre-agent

./: .env.example  .gitignore  Makefile  README.md  conftest.py  docker-compose.infrastructure.yml  docker-compose.yml
.github/workflows/: ci.yml
agents/diagnoser/: Dockerfile  requirements.txt
agents/learner/: Dockerfile  requirements.txt
agents/observer/: Dockerfile  requirements.txt
agents/orchestrator/: Dockerfile  requirements.txt
agents/remediator/: Dockerfile  requirements.txt
agents/safety/: Dockerfile  requirements.txt
config/alertmanager/: alertmanager.yml
config/loki/: loki.yml  promtail.yml
config/prometheus/: alerts.yml  prometheus.yml
config/tempo/: tempo.yml
dashboard/: Dockerfile  requirements.txt
dashboard/api/: deps.py  main.py  schemas.py
dashboard/frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
dashboard/tests/: conftest.py  test_approvals_api.py  test_incidents_api.py  test_websocket.py
docs/: TESTING.md  TODO.md  idea.md  index.md  lld.md
docs/agents/: README.md  diagnoser.md  learner.md  observer.md  orchestrator.md  (+2 more)
scripts/: init_nats.py
shared/: __init__.py  pyproject.toml
shared/agents/: base.py
shared/config/: settings.py
shared/db/: alembic.ini  models.py  session.py
shared/db/migrations/: __init__.py  env.py
shared/db/migrations/versions/: 0001_initial_schema.py
shared/logging/: logger.py
shared/messaging/: nats_client.py  schema.py  subjects.py
shared/tests/: test_base_agent.py  test_logger.py  test_models.py  test_nats_client.py  test_schema.py  test_settings.py
(+125 files in other folders)
